--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,3 +7,4 @@
   <input name="Password" type="text" placeholder="Password" required/>
   <input type="submit" value="Log In"/>
 </form>
+<p><a href="/registration/register">Register</a></p>
