--- a/app/views/registration/register.html.erb
+++ b/app/views/registration/register.html.erb
@@ -1,7 +1,9 @@
 <h1>Register a user name.</h1>
 
+<%= flash[:alert] %>
+
 <form action="/registration/validate" method="get">
-  <input type="text" name="Username" placeholder="Enter desired user name"/>
-  <input type="text" name="Password" placeholder="Enter desired password"/>
+  <input type="text" name="Username" placeholder="Enter desired user name" required/>
+  <input type="text" name="Password" placeholder="Enter desired password" required/>
   <input type="submit" value="Submit"/>
 </form>
