Style and format the html a bit

--- a/app/views/forum/home.html.erb
+++ b/app/views/forum/home.html.erb
@@ -7,8 +7,9 @@
   <!-- If there are messages, display up to the last 12 -->
   <% if !(Message.all[0].nil?) %>
     <% messages = Message.last(12) %>
-    <% messages.each do |message| %>
-    <p><%=" - " + message.content + " -- " + (message.user).username + " -- " + message.created_at.strftime("%I:%M%p on %m/%d/%Y") %></p>
+    <!-- Reverse the order so that the newest display at top -->
+    <% messages.reverse.each do |message| %>
+    <p><%="   - " + message.content + " :: " + (message.user).username + " -- " + message.created_at.strftime("%I:%M%p on %m/%d/%Y") %></p>
     <% end %>
   <% end %>
 </div>
