--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,61 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   background-color: #0490B7;
+ }
+
+ #log-in-box {
+   width: 75%;
+   height: 160px;
+   margin-top: 10px;
+   border-style: solid;
+   border-width: 1px;
+   border-color: black;
+   background-color: #65C2DC;
+ }
+
+ #register-box {
+   width: 75%;
+   height: 160px;
+   margin-top: 91px;
+   border-style: solid;
+   border-width: 1px;
+   border-color: black;
+   background-color: #65C2DC;
+ }
+
+ .form-box {
+   margin-top: 140px;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   width: 100%;
+ }
+
+ a {
+   color: black;
+ }
+
+ .head-title {
+   text-align:center
+ }
+
+#user-input {
+  margin-top: 30px;
+}
+
+#message-field {
+  width: 70%;
+}
+
+#message-area {
+  padding: 20px;
+  background-color: #65C2DC;
+  height: 400px;
+  border-style: solid;
+  border-width: 2px;
+  overflow: auto;
+}
