--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,14 @@
-<h1>Please log in</h1>
 
-<%= flash[:notice] %>
-
-<form action="/home/login" method="get">
-  <input name="Username" type="text" placeholder="User Name" required/>
-  <input name="Password" type="text" placeholder="Password" required/>
-  <input type="submit" value="Log In"/>
-</form>
-<p><a href="/registration/register">Register</a></p>
+<div class="form-box">
+  <h1 class="head-title">Welcome to the Flack Message Forum!</h1>
+  <div id="log-in-box">
+    <h1>Please log in</h1>
+    <%= flash[:notice] %>
+    <form action="/home/login" method="get">
+      <input name="Username" type="text" placeholder="User Name" required/>
+      <input name="Password" type="text" placeholder="Password" required/>
+      <input type="submit" value="Log In"/>
+    </form>
+    <p><a href="/registration/register">Register</a></p>
+  </div>
+</div>
