--- a/app/views/registration/register.html.erb
+++ b/app/views/registration/register.html.erb
@@ -1,9 +1,12 @@
-<h1>Register a user name.</h1>
 
-<%= flash[:alert] %>
-
-<form action="/registration/validate" method="post">
-  <input type="text" name="Username" placeholder="Enter desired user name" required/>
-  <input type="text" name="Password" placeholder="Enter desired password" required/>
-  <input type="submit" value="Submit"/>
-</form>
+<div class="form-box">
+  <div id="register-box">
+    <h1>Register a user name.</h1>
+    <!-- <%= flash[:alert] %> -->
+    <form action="/registration/validate" method="post">
+      <input type="text" name="Username" placeholder="Enter desired user name" required/>
+      <input type="text" name="Password" placeholder="Enter desired password" required/>
+      <input type="submit" value="Submit"/>
+    </form>
+  </div>
+</div>
