--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
  }
 
  #log-in-box {
+   border-radius: 5pt;
    width: 75%;
    height: 160px;
    margin-top: 10px;
@@ -28,6 +29,7 @@
  }
 
  #register-box {
+   border-radius: 5pt;
    width: 75%;
    height: 160px;
    margin-top: 91px;
@@ -64,6 +66,7 @@
 }
 
 #message-area {
+  border-radius: 5pt;
   padding: 20px;
   background-color: #65C2DC;
   height: 400px;
