--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     <%= flash[:notice] %>
     <form action="/home/login" method="get">
       <input name="Username" type="text" placeholder="User Name" required/>
-      <input name="Password" type="text" placeholder="Password" required/>
+      <input name="Password" type="password" placeholder="Password" required/>
       <input type="submit" value="Log In"/>
     </form>
     <p><a href="/registration/register">Register</a></p>
