--- a/app/views/settings/settings.html.erb
+++ b/app/views/settings/settings.html.erb
@@ -1,8 +1,27 @@
 
 <div class="form-box">
-  <h1>Settings#settings</h1>
-  <p></p>
+  <section>
+    <h1>Settings#settings</h1>
+    <p></p>
+  </section>
 
-  <h1>Private messages</h1>
+  <section>
+    <h1>Private messages</h1>
+    <p><%= @private_messages.length %></p>
+    <ul>
+      <!-- Don't run code if @private_messages is empty -->
+      <% if !@private_messages.nil? %>
+        <% @private_messages.each do |private_message| %>
+          <li><a href="/settings/show_private_message?private_message_id=<%= private_message.id.to_s %>"> at <%= private_message.created_at.to_s %> from <%= private_message.sender %></a></li>
+        <% end %>
+      <% end %>
+    </ul>
+    <div id="private_message_display">
 
+      <% if params[:display_private_message] == true %>
+        <p><%= PrivateMessage.find(@private_message_id) %></p>
+      <% end %>
+
+    </div>
+  </section>
 </div>
