--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,18 @@
    border-radius: 5pt;
    width: 75%;
    height: 160px;
-   margin-top: 91px;
+   margin-top: 80px;
+   border-style: solid;
+   border-width: 1px;
+   border-color: black;
+   background-color: #65C2DC;
+ }
+
+ #settings-box {
+   border-radius: 5pt;
+   width: 75%;
+   height: 160px;
+   margin-top: 10px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
@@ -44,6 +55,17 @@
   text-align: left;
   border-style: solid;
   border-width: 1px;
+}
+
+#private-message-box {
+  border-radius: 5pt;
+  width: 75%;
+  height: 160px;
+  margin-top: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  background-color: #65C2DC;
 }
 
  .form-box {
@@ -65,11 +87,11 @@
  }
 
 #user-input {
-  margin-top: 30px;
+  margin: 30px;
 }
 
 #message-field {
-  width: 70%;
+  width: 95%;
 }
 
 #message-area {
@@ -82,14 +104,17 @@
   overflow: auto;
 }
 
-.setings-link {
+#users-area {
+  border-radius: 5pt;
+  background-color: #65C2DC;
+  height: 400px;
+  border-style: solid;
+  border-width: 2px;
+  overflow: auto;
   float: right;
 }
 
-.pm-link {
+.link-box-container {
   float: right;
-}
-
-.log-out-link {
-  float: right;
+  width: 30%;
 }
