--- a/app/views/forum/private_message.html.erb
+++ b/app/views/forum/private_message.html.erb
@@ -1,10 +1,14 @@
-<h1>Private message</h1>
+<div class="form-box">
+  <div id="private-message-box">
+    <h1>Send a private message</h1>
 
-<form action="/forum/send_private_message" method="post">
-  <%= flash[:alert] %>
-  <label for="Username">Username</label>
-  <input type="text" name="Username"/>
-  <label for="Message">Message</label>
-  <input type="text" name="Message"/>
-  <input type="submit" value="Send"/>
-</form>
+    <form action="/forum/send_private_message" method="post">
+      <%= flash[:alert] %>
+      <label for="Username">Recipient</label>
+      <input type="text" name="Username"/>
+      <label for="Message">Message</label>
+      <input type="text" name="Message"/>
+      <input type="submit" value="Send"/>
+    </form>
+  </div>
+</div>
