--- a/app/views/registration/register.html.erb
+++ b/app/views/registration/register.html.erb
@@ -6,6 +6,7 @@
     <form action="/registration/validate" method="post">
       <input type="text" name="Username" placeholder="Enter desired user name" required/>
       <input type="password" name="Password" placeholder="Enter desired password" required/>
+      <input type="password" name="Password confirmation" placeholder="Confirm password" required/>
       <input type="submit" value="Submit"/>
     </form>
   </div>
