--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,30 @@
 <div class="form-box">
   <h1 class="head-title">Welcome to the Flack Message Forum!</h1>
   <div id="log-in-box">
-    <h1>Please log in</h1>
-    <%= flash[:notice] %>
-    <form action="/home/login" method="get">
-      <input name="Username" type="text" placeholder="User Name" required/>
-      <input name="Password" type="password" placeholder="Password" required/>
-      <input type="submit" value="Log In"/>
-    </form>
-    <p><a href="/registration/register">Register</a></p>
+    <h1>Log In</h1>
+    <%= form_for(:user, as: :user, url: session_path(:user)) do |f| %>
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password %><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+      </div>
+
+      <% if devise_mapping.rememberable? -%>
+        <div class="field">
+          <%= f.check_box :remember_me %>
+          <%= f.label :remember_me %>
+        </div>
+      <% end -%>
+
+      <div class="actions">
+        <%= f.submit "Log in" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
 </div>
