--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,13 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
+<div id="logout-link">
   <% if user_signed_in? %>
-    <li>
     <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-    </li>
   <% else %>
-    <li>
     <%= link_to('Login', new_user_session_path)  %>
-    </li>
   <% end %>
+</div>
 
 <%= yield %>
 
